records endpoint swagger
