# src/openapi.php
@@ -1,0 +1,18 @@
+<?php
+
+/**
+ * @OA\Info(
+ *     description="An example application for a Record Shop selling Oldies But Goldies records.",
+ *     version="1.0.0",
+ *     title="Swagger Record Shop",
+ *     @OA\Contact(
+ *         email="ismail.atkurt@gmail.com"
+ *     ),
+ *     @OA\License(
+ *         name="Apache 2.0",
+ *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
+ *     )
+ * )
+ *
+ * @OA\PathItem(path="/")
+ */
